# mobile_pose_cpp

./: CMakeLists.txt  README.txt
include/: mobile_pose.hpp
src/: main.cpp  mobile_pose.cpp
